Fix: 포스트간 간격 대폭 확대 (4em)
- 포스트 하단 패딩: 4em으로 대폭 증가
- 포스트간 마진: 4em으로 대폭 증가
- 연도별 그룹(year-group) 구조 추가
- 첫 포스트와 마지막 포스트 특별 처리
- 구분선을 점선으로 변경하여 더 부드럽게
- 포스트 내부 패딩 1.5em으로 조정
- 전체적으로 훨씬 여유있는 레이아웃 구성

--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -12,10 +12,17 @@ redirect_from:
 {% for post in site.posts %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
   {% if year != written_year %}
+    {% if written_year != 'None' %}
+      </div>  <!-- Close previous year-group -->
+    {% endif %}
     <h2 id="{{ year | slugify }}" class="archive__subtitle year-header">{{ year }}</h2>
+    <div class="year-group">  <!-- Start new year-group -->
     {% capture written_year %}{{ year }}{% endcapture %}
   {% endif %}
   <div class="year-archive-post">
     {% include archive-single.html %}
   </div>
 {% endfor %}
+{% if written_year != 'None' %}
+  </div>  <!-- Close last year-group -->
+{% endif %}
