style: year-archive 연도별 섹션 간격 확대
- 연도 헤더(.archive__subtitle) 상단 마진을 2em → 4em으로 증가
- 첫 번째 연도 헤더는 2em 마진 유지
- 모바일에서도 연도별 간격 증가 (1.5em → 3em)
- 연도별 블록 사이의 시각적 분리 개선

--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -26,12 +26,16 @@ redirect_from:
   font-size: 1.5em !important;
   font-weight: 600;
   color: var(--global-text-color, #333);
-  margin: 2em 0 1em 0;
+  margin: 4em 0 1.5em 0;
   padding: 0.75em 1em;
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
   border-radius: 8px;
   border-left: 5px solid var(--link-color, #0366d6);
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.archive__subtitle:first-of-type {
+  margin-top: 2em;
 }
 
 .archive__item {
@@ -130,7 +134,11 @@ redirect_from:
   .archive__subtitle {
     font-size: 1.3em !important;
     padding: 0.5em;
-    margin: 1.5em 0 0.75em 0;
+    margin: 3em 0 0.75em 0;
+  }
+  
+  .archive__subtitle:first-of-type {
+    margin-top: 1.5em;
   }
 }
 </style>
