fix: year-archive 페이지 제목 및 헤더 설정 수정
- 제목을 '연도별 게시물'로 한글화
- header overlay 설정 제거하여 제목 표시 정상화
- 탑메뉴 아래 제목 레이아웃 문제 해결

--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,11 +1,8 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "Publications by Year"
+title: "연도별 게시물"
 author_profile: true
-header:
-  overlay_color: "#5e616c"
-  overlay_filter: "0.5"
 redirect_from:
   - /wordpress/blog-posts/
   - /blog-posts/
