--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "연도별 게시물"
+title: "Publications by Year"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
